--- a/osTest/osTest.vcxproj
+++ b/osTest/osTest.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Interrupt.cpp" />
+    <ClCompile Include="Interrupt_test.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Interrupt.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
